# MeowdokuHelper

./: .gitignore  AGENT_HANDOFF.md  CONTRIBUTING.md  INCIDENTS.md  PM_PLAN.md  README.md  RELEASE.md  RISKS.md  TECH_DEBT.md  TEST_PLAN.md  geminidata.txt
.cursor/handoff/: AUDIT_BASELINE.md  PROJECT_HEALTH_AUDIT.md  (+2 more)
.github/: pull_request_template.md
doc/: PROJECT_STATUS.md  QA_ORACLE_AUDIT.md  QC_STATUS.md  SDLC.md  TEST_COVERAGE_EVAL.md  qa_oracle_manifest.yaml
docs/: 80_chars_file_list.txt  CODE_STANDARDS.md  COMPREHENSIVE_ARCHITECTURE.md  DEVELOPMENT_WORKFLOW.md  LINTING_QUICK_REFERENCE.md  MAC_IOS_TEST.md  NORTH_STAR_ARCHITECTURE_PLAN.md  PERFORMANCE_TESTING_GUIDE.md  POLYGLOT_GUARDRAILS.md  PROJECT_DECISION_TIMELINE.md  SETUP_GUIDE.md  TEMPLATE_WORDLE_CLEANUP_PLAN.md  TESTING_STRATEGY.md  WORDLE_SOLVER_ARCHITECTURE_ANALYSIS.md
meowdoku_helper/: README.md  analysis_options.yaml  device_performance_test.dart  iphone12_performance_test.dart  iphone_performance_test.dart  pubspec.yaml
meowdoku_helper/rust/: Cargo.toml
meowdoku_helper/rust/src/: benchmark_runner.rs  benchmarking.rs  frb_generated.rs  lib.rs
meowdoku_helper/rust/src/api/: meowdoku.rs  meowdoku_helper.rs  meowdoku_helper_reference.rs  mod.rs  simple.rs
meowdoku_helper/rust/src/solver/: board.rs  mod.rs  t2_t3_fixtures.rs  t4_fixtures.rs  t6_fixtures.rs  t6_qa_force.rs  test_helpers.rs  tier1.rs  tier2.rs  tier3.rs  tier4.rs  tier4_phantom.rs  tier5.rs
scripts/: epic_closure_check.sh  fixture_inventory.sh  generate_solver_goldens.sh  merge_ready.sh  qa_oracle_audit.sh  rename_project.sh
(+215 files in other folders)
