[package]
name = "rust_lib_meowdoku_helper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "gen_solver_goldens"
path = "src/bin/gen_solver_goldens.rs"

[dependencies]
flutter_rust_bridge = "=2.12.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
